--- a/browser/index.html
+++ b/browser/index.html
@@ -12,23 +12,24 @@
     <script src="/js/album/album.factories.js" defer></script>
     <script src="/js/player/player.controller.js" defer></script>
     <script src="/js/player/player.factory.js" defer></script>
+    <script src="/js/sidebar/sidebar.controller.js" defer></script>
   </head>
   <body ng-app="juke">
     <div id="main" class="container-fluid">
 
       <div class="col-xs-2">
-        <sidebar>
+        <sidebar ng-controller="SidebarCtrl">
           <img src="juke.svg" class="logo">
           <section>
             <h4 class="menu-item active">
-              <a href="#">ALBUMS</a>
+              <a href="#" ng-click="viewAlbums()">ALBUMS</a>
             </h4>
           </section>
         </sidebar>
       </div>
 
       <div class="col-xs-10">
-        <div ng-show="true" class="album" ng-controller="AlbumCtrl">
+        <div ng-show="showMe" class="album" ng-controller="AlbumCtrl">
           <p>
             <h3>{{ album.name }} {{ albumDuration }}</h3>
             <img ng-src="{{ album.imageUrl }}" class="img-thumbnail">
@@ -56,11 +57,11 @@
             </tbody>
           </table>
         </div>
-        <div ng-show="false" ng-controller="AlbumsCtrl">
+        <div ng-show="showMe" ng-controller="AlbumsCtrl">
           <h3>Albums</h3>
           <div class="row">
             <div class="col-xs-4" ng-repeat="album in albums">
-              <a class="thumbnail" href="#">
+              <a class="thumbnail" href="#" ng-click="viewOneAlbum(album.id)">
                 <img ng-src="{{album.imageUrl}}">
                 <div class="caption">
                   <h5>
